<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView android:id="@+id/address"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/instructions"
	    />
	
	<EditText android:id="@+id/titleField"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textCapWords"
	    android:hint="@string/title"
	    />
	
	<EditText android:id="@+id/addressField"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textCapWords"
	    android:hint="@string/address"
	    />
	
	<EditText android:id="@+id/cityField"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textCapWords"
	    android:hint="@string/city"
	    />
	
	<EditText android:id="@+id/stateField"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textCapWords"
	    android:hint="@string/state"
	    />
	
	<EditText android:id="@+id/countryField"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textCapWords"
	    android:hint="@string/country"
	    />
	
	<TextView android:id="@+id/note_instructions"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/note_title"
	    />
	
	<EditText android:id="@+id/noteField"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="textCapSentences"
	    android:lines="5"
	    android:hint="@string/note_info"
	    />
	
	<Button android:id="@+id/doneBtn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/done_button"
	    />
    
</LinearLayout>