<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/mapContainer">
    
     <fragment
          android:id="@+id/map"
          android:layout_width="match_parent"
          android:layout_height="0dp"
       	  android:layout_weight="7"
          android:name="com.google.android.gms.maps.MapFragment"/>
    
       <LinearLayout android:id="@+id/details_a"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="2"
	        android:orientation="vertical"
	        android:visibility="visible"
        >
        
        <Button android:id="@+id/addDataBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_button"
            />
        
    </LinearLayout>
    
    <ScrollView android:id="@+id/details_b"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        >
        
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        >
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="horizontal"
	            >
	            
	            <Button android:id="@+id/removeBtn"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:text="@string/remove_button"
	            style="@android:attr/buttonBarButtonStyle"
	            />
	            
	            <Button android:id="@+id/cancelBtn"
	            android:layout_width="0dip"
	            android:layout_weight="1"
	            android:layout_height="wrap_content"
	            android:text="@string/cancel_button"
	            style="@android:attr/buttonBarButtonStyle"
	            />
	            
	        </LinearLayout>
	        
	        <EditText android:id="@+id/update_title"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:text="@string/blank"
	           android:hint="@string/title"
	           />
	        
	        <EditText android:id="@+id/update_note"
	           android:layout_width="match_parent"
	           android:layout_height="wrap_content"
	           android:text="@string/blank"
	           android:hint="@string/note_title"
	           />
	        
	        <Button android:id="@+id/updateBtn"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/update_button"
	            style="@android:attr/buttonBarButtonStyle"
	            />
	        
	    </LinearLayout>
    </ScrollView>
    
</LinearLayout>